--- a/.github/workflows/python_ci_cd.yml
+++ b/.github/workflows/python_ci_cd.yml
@@ -22,3 +22,27 @@ jobs:
         run: make format
       - name: deploy
         run: make deploy
+      - name: Run main script
+        run: python src/polars_descriptive_statistics.py
+
+      - name: List files
+        run: |
+          pwd
+          ls -R  
+
+      - name: Archive and Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: ml_pipeline-artifacts
+          path: ${{ github.workspace }}/output
+
+      - name: Save to repository
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          echo GH_TOKEN: "${GH_TOKEN}"
+          git config --global user.name 'github-actions'
+          git config --local user.email "action@github.com"
+          git add .
+          git commit -m "Add results"
+          git push
